# dragon-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fragment.glsl  glinitials.pro  grass.tiff  resources.qrc  scale_14.tiff  scale_bronze.tiff  scale_green.tiff  scale_pink.tiff  scale_red.tiff  textures.qrc  vertex.glsl  wing_bronze.tiff  wing_gold.tiff  wing_pink.tiff  wing_white.tiff
android/: AndroidManifest.xml
android/jni/: Android.mk  gl_code.cpp
android/res/values/: strings.xml
android/src/fr/free/pasaulais/glinitials/: GLInitialsActivity.java  GLInitialsLib.java  GLInitialsView.java
cmake/: FindGLEW.cmake  FindTIFF.cmake
depends/: README.txt
include/: Dragon.h  DragonScene.h  Images.h  JointControl.h  Letters.h  Material.h  Mesh.h  MeshGL1.h  MeshGL2.h  Platform.h  Primitive.h  RenderState.h  RenderStateGL1.h  RenderStateGL2.h  RobotArm.h  Scene.h  SceneViewport.h  SimulationWindow.h  Vertex.h
meshes/: DRAGON_WING_MEMBRANE.stl  meshes.qrc
src/: CMakeLists.txt  Dragon.cpp  DragonScene.cpp  Images.cpp  JointControl.cpp  Letters.cpp  Material.cpp  Mesh.cpp  MeshGL1.cpp  MeshGL2.cpp  Platform.cpp  Primitive.cpp  RenderState.cpp  RenderStateGL1.cpp  RenderStateGL2.cpp  RobotArm.cpp  Scene.cpp  SceneViewport.cpp  SimulationWindow.cpp  Vertex.cpp  main.cpp
textures/: lava_green.tiff  scale_black.tiff  scale_blue.tiff  scale_gold.tiff  scale_white.tiff  textures.qrc  wing_black.tiff  wing_blue.tiff  wing_green.tiff  wing_red.tiff
